# alt-ime-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  release.sh
scripts/: generate_icon.py
src/: hook.rs  ime.rs  main.rs  startup.rs  tray.rs  update.rs
