[package]
name = "alt-ime-rs"
# リリース時は release.sh がタイムスタンプで上書きする
version = "0.1.0"
edition = "2021"
description = "左右のAltキーの空打ちでIMEのON/OFFを切り替えるWindows向け常駐ツール"
license = "MIT"
repository = "https://github.com/j4rviscmd/alt-ime-rs"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    # Constraint: windows-sys 0.59 で CreateEventW の引数型 SECURITY_ATTRIBUTES が Win32_Security feature 配下にある。今回 hook::start_suppress_thread が CreateEventW を新規使用したため、Win32_System_Threading だけでは型解決できず本 feature の有効化が必須(windows-sys 0.59.0 src/Windows/Win32/System/Threading/mod.rs の CreateEventW extern 定義で確認)。
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Networking_WinHttp",
    "Win32_Graphics_Gdi",
]}

# ビルド時にアイコンリソースを exe へ埋め込む
[build-dependencies]
winres = "0.1"

# 軽量な単一exe生成を狙う最適化
# Constraint: README要件「軽量・高速」「exeでビルド&配布」より、配布バイナリの最小化を最優先する。各フラグはそのための意図的な組合せ。
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
# Why: 本ツールはパニック時の復帰ではなく即終了で十分(常駐プロセスが異常状態で居座るより、ユーザの再起動の方が安全)。panicハンドラとアンワインド_tableを削ってサイズを削減する。
panic = "abort"
